--- a/style.css
+++ b/style.css
@@ -51,12 +51,9 @@ button.resultbox {
 /* OUTPUT AREA TOP OF SCREEN */
 
 div.outputboxes {
-    background-color:#ffffff;
-    display:flex;
-    text-align: center;
-    flex: 1 1 0;
-    overflow: auto;
-
+    overflow-y: scroll;    
+    height: 25vh;
+    padding-bottom: 3vh;
 }
 
 button.newestKanji {    
@@ -82,7 +79,6 @@ button.kanjiList {
     color: #666666;
     background-color: #ededed;
     text-align: center;
-    text-decoration: none;
     aspect-ratio: 1 / 1;
     
     border:1px solid rgb(255, 255, 255);
