--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
     height: 100%;
     background-color: #ffffff;
+    /* background-color: rgb(186, 186, 203); */
 }
 html {
     display: table;
@@ -10,130 +11,175 @@ body {
     display: table-cell;
     vertical-align: middle;
 }
-
-
-/* INPUT AREA BOTTOM OF SCREEN */
-
 div {
     padding: 0%;
     /* border:1px solid rgb(133, 133, 133); */
     padding-bottom: 1%;
 }
-.resultsboxes {
+a { 
+    color:#f74040; 
+}
+
+
+/* INPUT AREA BOTTOM OF SCREEN */
+
+div.resultsboxes {          /* THE 6 BUTTONS ABOVE THE CANVAS */
     background-color:#ffffff;
     display:flex;
     width: auto;
     text-align: center;
     justify-content: space-between;
-}
-
-
-button.resultbox {
-    border: none;
-    text-align: center;
-    aspect-ratio: 1 / 1;
-    /* text-decoration: none; */
-    display: inline-block;
-    font-size: 1.3rem;
-    flex: 1 1 0;
-    margin-left: 1%;
-    margin-right: 1%;
-}
-    button.resultbox.pass {
-        color: #666666;
-        background-color: #ededed;
     }
-    button.resultbox.failure {
-        background-color: #f74040;
-        color: #f7f7f7;
+    button.resultbox {
+        border: none;
+        text-align: center;
+        aspect-ratio: 1 / 1;
+        /* text-decoration: none; */
+        display: inline-block;
+        font-size: 1.3rem;
+        flex: 1 1 0;
+        margin-left: 1%;
+        margin-right: 1%;
     }
+        button.resultbox.startup {
+            color: #ededed;
+            background-color: #666666;
+        }
+        button.resultbox.raw {
+            color: #666666;
+            background-color: #ededed;
+        }
+        button.resultbox.pass {
+            color: #ffffff;
+            background-color: #22ea2f;
+        }
+        button.resultbox.failure {
+            background-color: #f74040;
+            color: #f7f7f7;
+        }
 
+div.canvasButtons {         /* THE 3 BUTTONS BELOW THE CANVAS */
+    /* display: flex; */
+    /* align-items:flex-end; */
+    }
+    button.bottomButton {
+        margin:0 auto;
+        padding-top: 1vh;
+        padding-bottom: 1.2vh;
+        border: none;
+        font-size: 1.0rem;
+        color: #ededed;
+        background-color: #666666;
+        text-align: center;
+        aspect-ratio: 3 / 1;
+    }
+        
 
 
 /* OUTPUT AREA TOP OF SCREEN */
 
-::-webkit-scrollbar {       /* HIDE SCROLLBAR */
-    display: none;
-}
-
-div.outputboxes {
+div.outputboxes {               /* THE SCROLLABLE, VERTICAL LIST OF INPUTTED KANJI */
     overflow-y: scroll;    
     height: 30vh;
     width:65%;
     padding-bottom: 2vh;
-}
-div.actionButtons {
-    display: inline-table;
-    margin: 0 auto;
-}
-div.canvasButtons {
-    display: flex;
-    flex-direction:row;
-    align-items: flex-end;
-}
-
-button.newestKanji {    
-    margin:0 auto;
-    display:block;
-    border: none;
-    font-size: 2.3rem;
-    color: #666666;
-    background-color: #ededed;
-    text-align: center;
-    text-decoration: none;
-    aspect-ratio: 1 / 1;
-
-}
-
-button.kanjiList {
-    margin:0 auto;
-    display:block;
-    border: none;
-    /* font-size: 20px; */
-    font-size: 1.3rem;
-    color: #666666;
-    background-color: #ededed;
-    text-align: center;
-    aspect-ratio: 1 / 1;
-    border:1px solid rgb(255, 255, 255);
-}
-
-button.topButton {
-    /* margin:0 auto; */
-    margin-bottom: 1%;
-    display:table;
-    border: none;
-    /* font-size: 20px; */
-    font-size: 1.4rem;
-    color: #ededed;
-    background-color: #666666;
-    text-align: center;
-    aspect-ratio: 1 / 1;
-    max-height:fit-content;  /* keeps button to square when using flex*/
-    border:1px solid rgb(255, 255, 255);
-}
-
-
-button.bottomButton {
-    margin:0 auto;
-    /* display:table; */
-    border: none;
-    font-size: 1.2rem;
-    color: #ededed;
-    background-color: #666666;
-    text-align: center;
-    aspect-ratio: 1 / 1;
-    max-height:fit-content;  /* keeps button to square when using flex*/
-    border:1px solid rgb(255, 255, 255);
-}
-
-/* @media(max-width:640px) {
-
-    #canvas {
-        width: 100%; 
-        height: 100%;
-        border: 2px solid;
-        cursor: crosshair;
+    }
+    ::-webkit-scrollbar { 
+        /* Hide scrollbar syntax */
+        display: none;  
+    } 
+    button.kanjiList {
+        margin:0 auto;
+        display:block;
+        border: none;
+        font-size: 1.3rem;
+        color: #666666;
+        background-color: #ededed;
+        text-align: center;
+        aspect-ratio: 1 / 1;
+        border:1px solid rgb(255, 255, 255);
     }
 
-} */
+    
+div.actionButtons {             /* THE ADMIN BUTTONS IN THE TOP CORNER OF THE SCREEN */
+    display: inline-table;
+    margin: 0 auto;
+    }
+    button.actionButton {
+        margin: auto;
+        margin-top: 25%;
+        display:table;
+        border: hidden;
+        font-size: 1.4rem;
+        color: #ededed;
+        background-color: #666666;
+        text-align: center;
+        aspect-ratio: 1 / 1;
+        max-height:fit-content;  
+        /* ^keeps button to square when using flex */
+    }
+
+div.newKanji {                  /* THESE ARE THE 3 BUTTONS ABOVE THE CANVAS */
+    background-color:#ffffff;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    }
+    button.NKactionButton {
+        margin-top: 3%;
+        margin-bottom: 5%;
+        margin-inline: 14%;
+        /* display:inline-flex; */
+        vertical-align:top;
+        font-size: 1.4rem;
+        border: hidden;
+        color: #ededed;
+        background-color: #666666;
+        text-align: center;
+        aspect-ratio: 1 / 1;
+        /* max-height:fit-content; */
+        /* border:1px solid rgb(255, 255, 255); */
+    }
+    button.newestKanji {    
+
+        margin: auto;
+        margin-bottom: 3%;
+        border: hidden;
+        font-size: 2.5rem;
+        color: #666666;
+        background-color: #ededed;
+        text-align: center;
+        aspect-ratio: 1 / 1;
+    }
+
+
+/* OVERLAY FOR INFORMATION */
+
+#overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.95); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+    overflow-y: scroll;    
+  }
+  #overlayText{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 1rem;
+    font-family: Hiragino Kaku Gothic Pro, Hiragino Sans, Meiryo, sans-serif;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    text-align: justify;
+    /* margin-top: 5%; */
+    /* margin-bottom: 5%; */
+  }
+ 
