updates to kanjiInfo()

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ div.newKanji {                  /* THESE ARE THE 3 BUTTONS ABOVE THE CANVAS */
     }
 
 
-/* OVERLAY FOR INFORMATION */
+                                    /* OVERLAY INFORMATION */
 
 /* .over { 
         overflow-y:auto;
@@ -196,15 +196,46 @@ div.newKanji {                  /* THESE ARE THE 3 BUTTONS ABOVE THE CANVAS */
     display: block; 
     margin: 0;
     padding: 0;
-    line-height: 1.6;
+    line-height: 1.5;
     text-align: left ;
     text-indent: -50px; /* This reverse-indents each <p> */
     transform: translate(8%, 0%); /* This compensates for the offset to slightly centre it back */
     -ms-transform: translate(8%, 0%);
   }
-  /* .overlayInfo.yomi {
-    font-size: 0.7rem !important;
-  } */
+
+
+                                      /* KANJI INFO TABLE INFO */
+.tg {
+    border-collapse:collapse;
+    border-spacing:0;
+}
+.tg td {
+    border-color: black;
+    border-style: dotted;
+    border-width: 1px;
+    overflow: hidden;
+    /* padding: 5px 40px;
+    margin: 5px 40px; */
+    /* word-break: normal; */
+}
+.tg .tg-left {
+    border-color: inherit;
+    text-align: middle;
+    vertical-align: middle;
+    font-size: 0.9rem;
+    padding: 3px 10px;
+    /* margin:  5px 15px; */
+}
+.tg .tg-right {
+    border-color: inherit;
+    text-align: left;
+    vertical-align: middle;
+    font-size: 0.9rem;
+    padding: 3px 5px 3px 10px;
+    /* margin:  5px 40px; */
+
+}
+
 
                  /* ALT SPACING (TODO: BUGGY) */
   /* #overlayText.help {
