--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* TODO: CLEAN UP ALL THIS CSS */
+
 html, body {
     height: 100%;
     background-color: #ffffff;
@@ -176,35 +178,40 @@ div.newKanji {                  /* THESE ARE THE 3 BUTTONS ABOVE THE CANVAS */
 
   }
   #overlayText{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position:relative;
+    align-items: center;
+    padding: 15%;
+    
     font-size: 1rem;
     font-family: Hiragino Kaku Gothic Pro, Hiragino Sans, Meiryo, sans-serif;
-    color: white;
-    transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    text-align: justify;
     line-height: 1.4;
-    /* margin-top: 5%; */
-    /* margin-bottom: 5%; */
+    text-align: justify; 
+    color: white;
+      
+    /* ABSOLUTE POSITION METHOD */ 
+    /*position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%); */
+  
   }
   .overlayKanji {
 
   }
-  .overlayInfo {            /* THE KANJI INFO OVERLAY */
+  .overlayInfo {                                    /* THE KANJI INFO OVERLAY */
     display: block; 
     margin: 0;
     padding: 0;
     line-height: 1.5;
-    text-align: left ;
-    text-indent: -50px; /* This reverse-indents each <p> */
+    text-align: center;
+    /* text-indent: -50px; /* This reverse-indents each <p> */
     transform: translate(8%, 0%); /* This compensates for the offset to slightly centre it back */
     -ms-transform: translate(8%, 0%);
   }
 
 
-  fg:before {                                      /* FURIGANA INSIDE KANJI TABLE */
+fg:before {                                         /* FURIGANA INSIDE KANJI TABLE */
     content: attr(t);
     display: block;
     font-size: 50%;
@@ -214,16 +221,18 @@ div.newKanji {                  /* THESE ARE THE 3 BUTTONS ABOVE THE CANVAS */
 fg {
     display: inline-block;
     text-indent: 0px;
-    line-height: normal;
-    /* -webkit-text-emphasis: none; */
+    /* line-height: normal; */
     text-align: center;
-    line-height: 1;
+    line-height: 1.1;
 }
 
 
 .tg {                                                /* KANJI INFO TABLE INFO */
     border-collapse:collapse;
     border-spacing:0;
+    /* align-content: center; */
+    margin-left: auto;
+    margin-right: auto;
 }
 .tg td {
     border-color: black;    border-style: dotted;
@@ -233,14 +242,16 @@ fg {
 }
 .tg .tg-left {
     border-color: inherit;      text-align: middle;     
-    vertical-align: middle;     font-size: 1.1rem;
+    vertical-align: middle;     font-size: 1.2rem;
     padding: 3px 10px;
+    
     /* margin:  5px 15px; */
 }
 .tg .tg-right {
     border-color: inherit;      text-align: left;
-    vertical-align: middle;     font-size: 1rem;
+    vertical-align: middle;     font-size: 1.1rem;
     padding: 3px 5px 3px 10px;
+
     /* margin:  5px 40px; */
 }
 
