--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
-/* TODO: CLEAN UP ALL THIS CSS */
+/*  APP LAYOUT
+
+      ┌─┐ ┌─┐ <--- actionButton/s
+      │-│ └─┘
+      │-│ <------- div.outputboxes, button.kanjiList   
+      └─┘
+  ┌─┐ ┌─┐ ┌─┐ <--- div.newKanji, NKactionButton, button.newestKanji
+  └─┘ └─┘ └─┘
+  ┌─────────┐ 
+  ├─────────┤ <--- resultsbox/es
+  │         │ 
+  │         │ <--- canvas (defined in index.html)
+  │─────────┘
+  └─┘└─┘└─┘ <----- button.bottomButton 
+*/
 
 html, body {
     height: 100%;
@@ -25,9 +39,10 @@ a {
 }
 
 
+
 /* INPUT AREA BOTTOM OF SCREEN */
 
-div.resultsboxes {          /* THE 6 BUTTONS ABOVE THE CANVAS */
+div.resultsboxes {           
     background-color:#ffffff;
     display:flex;
     width: auto;
@@ -62,10 +77,6 @@ div.resultsboxes {          /* THE 6 BUTTONS ABOVE THE CANVAS */
             color: #f7f7f7;
         }
 
-div.canvasButtons {         /* THE 3 BUTTONS BELOW THE CANVAS */
-    /* display: flex; */
-    /* align-items:flex-end; */
-    }
     button.bottomButton {
         margin:0 auto;
         padding-top: 0.8vh;  /* 1vh before*/
@@ -104,7 +115,7 @@ div.outputboxes {               /* THE SCROLLABLE, VERTICAL LIST OF INPUTTED KAN
         border:1px solid rgb(255, 255, 255);
     }
 
-    
+
 div.actionButtons {             /* THE ADMIN BUTTONS IN THE TOP CORNER OF THE SCREEN */
     display: inline-table;
     margin: 0 auto;
@@ -157,66 +168,77 @@ div.newKanji {                  /* THESE ARE THE 3 BUTTONS ABOVE THE CANVAS */
     }
 
 
-                                    /* OVERLAY INFORMATION */
-
-/* .over { 
-        overflow-y:auto;
-        height:100%;   
-    } */
+                       /*_________OVERLAY INFORMATION__________*/
 #overlay {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-    top: 0; 
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.95); /* Black background with opacity */
-    cursor: pointer; /* Add a pointer on hover */
-    /* overflow-y: scroll !important; */
+    position: fixed;  /* Sit on top of the page content     */
+    display: none;   /* Overlay is hidden by default       */
+    height: 100%;   /* Full height (cover the whole page) */
+    width: 100%;   /* Full width (cover the whole page)  */
+    top: 0;       /* Do not remove */
+    left: 0;     /* Do not remove */
+    right: 0;   /* Do not remove */
+    bottom: 0; /* Do not remove */
+    background-color: rgba(0,0,0,0.95);
+    }
+    #overlayText{                               /* THE HELP/ABOUT OVERLAY PAGE */
+        position:relative;
+        padding: 12%;
+        align-items: center;
 
-  }
-  #overlayText{
-    position:relative;
-    align-items: center;
-    padding: 15%;
-    
-    font-size: 1rem;
-    font-family: Hiragino Kaku Gothic Pro, Hiragino Sans, Meiryo, sans-serif;
-    line-height: 1.4;
-    text-align: justify; 
-    color: white;
-      
-    /* ABSOLUTE POSITION METHOD */ 
-    /*position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%); */
-  
-  }
-  .overlayKanji {
-
-  }
-  .overlayInfo {                                    /* THE KANJI INFO OVERLAY */
-    display: block; 
-    margin: 0;
-    padding: 0;
-    line-height: 1.5;
-    text-align: center;
-    /* text-indent: -50px; /* This reverse-indents each <p> */
-    transform: translate(8%, 0%); /* This compensates for the offset to slightly centre it back */
-    -ms-transform: translate(8%, 0%);
-  }
+        font-family: Hiragino Kaku Gothic Pro, Hiragino Sans, Meiryo, sans-serif;
+        text-align: justify; 
+        font-size: 1rem;
+        line-height: 1.4;
+        color: white;
+        }
+        .overlayInfo {                          /* THE KANJI INFO OVERLAY */       
+            display: block; 
+            margin: 0;
+            padding: 0;
+            line-height: 1.5;
+            text-align: center;
+            transform: translate(8%, 0%); /* This compensates for the offset to slightly centre it back */
+            -ms-transform: translate(8%, 0%);
+        }
 
 
-fg:before {                                         /* FURIGANA INSIDE KANJI TABLE */
-    content: attr(t);
+  .tg {                             /* ____________KANJIINFO() TABLE INFO IN OVERLAY */
+    border-collapse:collapse;
+    border-spacing:0;
+    /* align-content: center; */
+    margin-left: auto;
+    margin-right: auto;
+    }
+    .tg td {
+        border-color: black;    
+        border-style: dotted;
+        border-width: 1px;        
+        }
+        .tg .tg-left {
+            border-color: inherit;      
+            text-align: middle;     
+            /* vertical-align: middle; */
+            font-size: 1.2rem;
+            padding: 3px 10px;
+        }
+        .tg .tg-right {
+            border-color: inherit;      
+            text-align: left;
+            /* vertical-align: middle; */
+            font-size: 1.1rem;
+            padding: 3px 5px 3px 10px;
+        }
+        .tg .tg-right.smalltext {
+            font-size: 0.9rem;
+            line-height: 1.3;
+        }
+                                  
+fg:before {                             /* ____________FURIGANA INSIDE KANJI TABLE */
+    content: attr(t);           
     display: block;
     font-size: 50%;
     text-align: start;
-    line-height: 1.5;
+    line-height: 1.2;
 }
 fg {
     display: inline-block;
@@ -224,49 +246,7 @@ fg {
     /* line-height: normal; */
     text-align: center;
     line-height: 1.1;
-}
+} 
+/* Thanks to MysticWhiteDragon on SO for this furigana solution: https://stackoverflow.com/a/54324347 */
 
 
-.tg {                                                /* KANJI INFO TABLE INFO */
-    border-collapse:collapse;
-    border-spacing:0;
-    /* align-content: center; */
-    margin-left: auto;
-    margin-right: auto;
-}
-.tg td {
-    border-color: black;    border-style: dotted;
-    border-width: 1px;        overflow: hidden;
-    /* padding: 5px 40px;     margin: 5px 40px; */
-    /* word-break: normal; */
-}
-.tg .tg-left {
-    border-color: inherit;      text-align: middle;     
-    vertical-align: middle;     font-size: 1.2rem;
-    padding: 3px 10px;
-    
-    /* margin:  5px 15px; */
-}
-.tg .tg-right {
-    border-color: inherit;      text-align: left;
-    vertical-align: middle;     font-size: 1.1rem;
-    padding: 3px 5px 3px 10px;
-
-    /* margin:  5px 40px; */
-}
-
-
-                 /* ALT SPACING (TODO: BUGGY) */
-  /* #overlayText.help {
-    position: absolute;
-    top: 10%;
-    left: 19%;
-    bottom: 60%;
-    font-size: 0.9rem;
-    font-family: Hiragino Kaku Gothic Pro, Hiragino Sans, Meiryo, sans-serif;
-    color: white;
-    transform: translate(-12%,-25%);
-    -ms-transform: translate(-20%,-20%);
-    text-align: justify;
-
-  } */
